@startuml
title ERD he thong quan ly su kien - ban rut gon truong
hide circle
skinparam linetype ortho
skinparam packageStyle rectangle
left to right direction
package "Su kien - dang ky - diem danh" {
  entity "NGUOI_DUNG" as nguoi_dung {
    * PK ma_sinh_vien
      vai_tro, lop, ho_ten
      email, mat_khau
      trang_thai
      ...
  }
  entity "LOAI_SU_KIEN" as loai_su_kien {
    * PK ma_loai_su_kien
      ten_loai, mo_ta
      ...
  }
  entity "MAU_BAI_DANG" as mau_bai_dang {
    * PK ma_mau
    + FK ma_nguoi_tao
    + FK ma_loai_su_kien
      ten_mau, bo_cuc
      ...
  }
  entity "SU_KIEN" as su_kien {
    * PK ma_su_kien
    + FK ma_loai_su_kien
    + FK ma_nguoi_tao
    + FK ma_nguoi_to_chuc
      ten_su_kien, thoi_gian
      dia_diem, diem_cong
      trang_thai, qr_token
      ...
  }
  entity "DANG_KY" as dang_ky {
    * PK ma_dang_ky
    + FK ma_sinh_vien
    + FK ma_su_kien
      trang_thai_tham_gia
      ...
  }
  entity "CHI_TIET_DIEM_DANH" as chi_tiet_diem_danh {
    * PK ma_chi_tiet_diem_danh
    + FK ma_dang_ky
    + FK ma_su_kien
    + FK ma_sinh_vien
      loai_diem_danh, diem_danh_at
      ...
  }
  entity "LICH_SU_DIEM" as lich_su_diem {
    * PK ma_lich_su_diem
    + FK ma_sinh_vien
    + FK ma_dang_ky
      diem, nguon
      thoi_gian_ghi_nhan
      ...
  }
  entity "THONG_BAO" as thong_bao {
    * PK ma_thong_bao
    + FK ma_sinh_vien
    + FK ma_su_kien_lien_quan
      tieu_de, da_doc
      ...
  }
  entity "LICH_GUI_THONG_BAO" as lich_gui_thong_bao {
    * PK ma_lich_gui
    + FK ma_su_kien_lien_quan
    + FK ma_nguoi_tao
      pham_vi, kieu_gui
      trang_thai, thoi_gian_gui
      ...
  }
}
package "Media" {
  entity "THU_VIEN_DA_PHUONG_TIEN" as thu_vien_da_phuong_tien {
    * PK ma_phuong_tien
    + FK ma_su_kien
    + FK ma_nguoi_tai_len
      ten_tep, loai_tep
      duong_dan_tep
      ...
  }
  entity "THE_ANH" as the_anh {
    * PK ma_the_anh
    + FK ma_nguoi_tao
      ten_the, mau_sac
      ...
  }
  entity "THE_ANH_THU_VIEN" as the_anh_thu_vien {
    * PK id
    + FK ma_the_anh
    + FK ma_phuong_tien
      ...
  }
}
package "Bau cu" {
  entity "BAU_CU" as bau_cu {
    * PK ma_bau_cu
    + FK ma_nguoi_tao
      tieu_de, thoi_gian
      trang_thai, hien_thi
      ...
  }
  entity "CU_TRI" as cu_tri {
    * PK ma_cu_tri
    + FK ma_bau_cu
    + FK ma_sinh_vien
      da_bo_phieu
      ...
  }
  entity "UNG_CU_VIEN" as ung_cu_vien {
    * PK ma_ung_cu_vien
    + FK ma_bau_cu
      ma_sinh_vien, ho_ten
      lop, thu_tu_hien_thi
      ...
  }
  entity "PHIEU_BAU" as phieu_bau {
    * PK ma_phieu_bau
    + FK ma_bau_cu
      hash_ip
      thoi_gian_gui
      ...
  }
  entity "CHI_TIET_PHIEU_BAU" as chi_tiet_phieu_bau {
    * PK ma_chi_tiet
    + FK ma_phieu_bau
    + FK ma_ung_cu_vien
      ...
  }
}
package "He thong" {
  entity "PERSONAL_ACCESS_TOKENS" as personal_access_tokens {
    * PK id
      tokenable_type, tokenable_id
      token, abilities
      ...
  }
  entity "PASSWORD_RESET_TOKENS" as password_reset_tokens {
    * PK email
      token
      created_at
  }
  entity "ACTIVITY_LOGS" as activity_logs {
    * PK id
      user_id, action
      model_type, model_id
      created_at
      ...
  }
  entity "SMTP_SETTINGS" as smtp_settings {
    * PK id
      mail_host, mail_port
      mail_username
      is_active
      ...
  }
  entity "GEMINI_SETTINGS" as gemini_settings {
    * PK id
      api_key, model
      temperature, max_tokens
      is_active
      ...
  }
  entity "FAILED_JOBS" as failed_jobs {
    * PK id
      uuid
      connection, queue
      failed_at
      ...
  }
  entity "MIGRATIONS" as migrations {
    * PK id
      migration
      batch
  }
}
loai_su_kien ||--o{ su_kien : ma_loai_su_kien
loai_su_kien ||--o{ mau_bai_dang : ma_loai_su_kien
nguoi_dung ||--o{ su_kien : nguoi_tao/to_chuc
nguoi_dung ||--o{ mau_bai_dang : ma_nguoi_tao
su_kien ||--o{ dang_ky : ma_su_kien
nguoi_dung ||--o{ dang_ky : ma_sinh_vien
dang_ky ||--o{ chi_tiet_diem_danh : ma_dang_ky
su_kien ||--o{ chi_tiet_diem_danh : ma_su_kien
nguoi_dung ||--o{ chi_tiet_diem_danh : ma_sinh_vien
dang_ky ||--o{ lich_su_diem : ma_dang_ky
nguoi_dung ||--o{ lich_su_diem : ma_sinh_vien
su_kien ||--o{ thong_bao : ma_su_kien_lien_quan
nguoi_dung ||--o{ thong_bao : ma_sinh_vien
su_kien ||--o{ lich_gui_thong_bao : ma_su_kien_lien_quan
nguoi_dung ||--o{ lich_gui_thong_bao : ma_nguoi_tao
su_kien ||--o{ thu_vien_da_phuong_tien : ma_su_kien
nguoi_dung ||--o{ thu_vien_da_phuong_tien : ma_nguoi_tai_len
the_anh ||--o{ the_anh_thu_vien : ma_the_anh
thu_vien_da_phuong_tien ||--o{ the_anh_thu_vien : ma_phuong_tien
nguoi_dung ||--o{ the_anh : ma_nguoi_tao
nguoi_dung ||--o{ bau_cu : ma_nguoi_tao
bau_cu ||--o{ cu_tri : ma_bau_cu
nguoi_dung ||--o{ cu_tri : ma_sinh_vien
bau_cu ||--o{ phieu_bau : ma_bau_cu
bau_cu ||--o{ ung_cu_vien : ma_bau_cu
phieu_bau ||--o{ chi_tiet_phieu_bau : ma_phieu_bau
ung_cu_vien ||--o{ chi_tiet_phieu_bau : ma_ung_cu_vien
' Lien ket logic, khong co FK trong schema
nguoi_dung ||..o{ personal_access_tokens : tokenable_id
nguoi_dung ||..o{ password_reset_tokens : email
nguoi_dung ||..o{ activity_logs : user_id
@enduml